Show category, levels, and learning content

--- a/src/app/pages/learn/learn.page.html
+++ b/src/app/pages/learn/learn.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Testing</ion-title>
+    <ion-title>Learn</ion-title>
   </ion-toolbar>
 </ion-header>
 
