--- a/src/app/pages/learn/learn.page.html
+++ b/src/app/pages/learn/learn.page.html
@@ -5,5 +5,12 @@
 </ion-header>
 
 <ion-content>
+  <ion-row *ngIf="quiz">
+    <ion-col>
+      <!-- {{ quiz[i].key }} -->
+    </ion-col>
+  </ion-row>
+  <ion-button (click)="next()" [disabled]="disableButton"> next</ion-button>
+  <ion-button (click)="salah(i)" [disabled]="disableButton"> salah</ion-button>
   <ion-button (click)="startSpeech()">Click mee!!!</ion-button>
 </ion-content>
