--- a/src/app/pages/levels/levels.page.html
+++ b/src/app/pages/levels/levels.page.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>levels</ion-title>
+    <ion-buttons slot="start">
+      <ion-button (click)="goBack()" slot="start" fill="clear">
+        <ion-icon name="arrow-back" slot="icon-only" color="white"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-title>Levels</ion-title>
   </ion-toolbar>
 </ion-header>
 
