--- a/src/app/pages/learn/learn.page.html
+++ b/src/app/pages/learn/learn.page.html
@@ -4,10 +4,26 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-row *ngIf="quiz">
+<ion-content *ngIf="quiz">
+  <ion-row >
     <ion-col>
       {{ quiz[i].option1 }}
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="6">
+      {{ quiz[i].option1 }}
+    </ion-col>
+    <ion-col size="6">
+      {{ quiz[i].option2 }}
+    </ion-col>
+  </ion-row>
+  <ion-row>
+    <ion-col size="6">
+      {{ quiz[i].option3 }}
+    </ion-col>
+    <ion-col size="6">
+      {{ quiz[i].option4 }}
     </ion-col>
   </ion-row>
   <ion-button (click)="next()" [disabled]="disableButton"> next</ion-button>
