--- a/src/app/pages/learn/learn.page.html
+++ b/src/app/pages/learn/learn.page.html
@@ -10,23 +10,24 @@
       {{ quiz[i].option1 }}
     </ion-col>
   </ion-row>
-  <ion-row>
-    <ion-col size="6">
-      {{ quiz[i].option1 }}
+  <ion-row class="ion-align-items-center">
+    <ion-col size="6" class="ion-text-center ion-no-padding">
+      <div class="option-box">{{ quiz[i].option1 }}</div>
     </ion-col>
-    <ion-col size="6">
-      {{ quiz[i].option2 }}
+    <ion-col size="6" class="ion-text-center ion-no-padding">
+      <div class="option-box">{{ quiz[i].option2 }}</div>
     </ion-col>
-  </ion-row>
-  <ion-row>
-    <ion-col size="6">
-      {{ quiz[i].option3 }}
+    <ion-col size="6" class="ion-text-center ion-no-padding">
+      <div class="option-box">{{ quiz[i].option3 }}</div>
     </ion-col>
-    <ion-col size="6">
-      {{ quiz[i].option4 }}
+    <ion-col size="6" class="ion-text-center ion-no-padding">
+      <div class="option-box">{{ quiz[i].option4 }}</div>
     </ion-col>
   </ion-row>
-  <ion-button (click)="next()" [disabled]="disableButton"> next</ion-button>
-  <ion-button (click)="salah(i)" [disabled]="disableButton"> salah</ion-button>
-  <ion-button (click)="startSpeech()">Click mee!!!</ion-button>
+  <ion-row>
+    <ion-col>
+      <ion-button (click)="startSpeech()" expand="block" class="ion-text-capitalize">Answer</ion-button>
+    </ion-col>
+  </ion-row>
+  
 </ion-content>
