--- a/src/app/pages/category/category.page.html
+++ b/src/app/pages/category/category.page.html
@@ -10,10 +10,10 @@
 </ion-header>
 
 <ion-content class="ion-padding">
-  <div >
+  <div>
     <ion-row class="ion-align-items-center">
-      <ion-col *ngFor="let category of categories" (click)="gotoLevels(category.key)" size="6" class="ion-text-center ion-no-padding">
-        <div class="boxes text-category">{{ category.name }}</div>
+      <ion-col class="ion-text-center ion-no-padding" *ngFor="let category of categories" (click)="gotoLevels(category.key)" size="6" >
+        <div class="boxes text-category" [ngClass]="{ 'boxes-disabled': category.key > currLvl}">{{ category.name }}</div>
       </ion-col>
     </ion-row>
   </div>
