--- a/src/app/pages/category/category.page.scss
+++ b/src/app/pages/category/category.page.scss
@@ -4,7 +4,11 @@
     border-radius: 6px;
     margin: 10px;
     vertical-align: middle;
+    &-disabled {
+        background-color: aquamarine;
+    }
 }
+
 
 .text {
     &-category {
