--- a/src/app/pages/category/category.page.scss
+++ b/src/app/pages/category/category.page.scss
@@ -1,6 +1,6 @@
 .boxes {
     background-color: yellowgreen;
-    padding: 20px;
+    // padding: 20px;
     border-radius: 6px;
     margin: 10px;
     vertical-align: middle;
