Button assets; Changing display for home & levels

--- a/src/app/pages/category/category.page.html
+++ b/src/app/pages/category/category.page.html
@@ -1,19 +1,33 @@
-<ion-header>
+<ion-header translucent="true">
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button (click)="goBack()" slot="start" fill="clear">
         <ion-icon name="arrow-back" slot="icon-only" color="white"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>Categories</ion-title>
+    <ion-title class="text-title" text-center>Level</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
+<ion-content class="ion-padding" fullscreen="true">
   <div>
     <ion-row class="ion-align-items-center">
       <ion-col class="ion-text-center ion-no-padding" *ngFor="let category of categories" size="6" >
-        <ion-button expand="full" (click)="gotoLevels(category.key)"  class="boxes text-category" [ngClass]="{ 'boxes-disabled': category.key > currLvl}" [disabled]="!category.available">{{ category.name }}</ion-button>
+        
+        <div *ngIf="category.available" class="ion-activatable ripple-parent starting-button">
+          <img src="assets/buttons/learnBtn.png" style="width : 100%" (click)="gotoLevels(category.key)" >
+          <ion-ripple-effect></ion-ripple-effect>
+        </div>
+        <div *ngIf="!category.available">
+          <img src="assets/buttons/practiceBtn_ds.png" style="width : 95%">
+        </div>
+
+        <!-- <div class="imgbox txt-center-box ion-activatable ripple-parent starting-button">
+          <ion-text>Skyscrapers</ion-text>
+          <ion-ripple-effect></ion-ripple-effect>
+        </div> -->
+
+        <!-- <ion-button expand="full" (click)="gotoLevels(category.key)"  class="boxes text-category" [ngClass]="{ 'boxes-disabled': category.key > currLvl}" [disabled]="!category.available">{{ category.name }}</ion-button> -->
       </ion-col>
     </ion-row>
   </div>
