--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -1,3 +1,7 @@
+ion-content {
+  --background: url('../../../assets/background.jpg') no-repeat center center / cover;
+}
+
 #container {
   text-align: center;
 
@@ -5,7 +9,7 @@
   left: 0;
   right: 0;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-75%);
 }
 
 .boxes {
@@ -27,3 +31,13 @@
     color: #D7AA2E
   }
 }
+
+.ripple-parent {
+  position: relative;
+  overflow: hidden;
+}
+
+.starting-button {
+  width: 70%; border-radius: 40px; margin: auto
+}
+
