--- a/src/app/pages/category/category.page.scss
+++ b/src/app/pages/category/category.page.scss
@@ -1,3 +1,15 @@
+ion-content {
+    --background: url('../../../assets/background.jpg') no-repeat center center / cover;
+    font-family: keepCalm;
+}
+
+ion-toolbar {
+    --background: transparent;
+}
+.header-md::after {
+    display: none;
+  }
+
 .boxes {
     background-color: yellowgreen;
     // padding: 20px;
@@ -15,4 +27,40 @@
         font-size: 16px;
         font-weight: bold;
     }
+    &-title {
+        color: #fff396;
+        font-weight: bold;
+    }
+    &-uwa {
+        font-size: 16px;
+    }
+}
+
+.ripple-parent {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .starting-button {
+    width: 95%; border-radius: 40px; margin: auto
+  }
+.imgbox {
+background: 
+url('../../../assets/buttons/learnBtn.png');
+background-size: cover;
+width: 175px;
+height: 66px;
+// margin: 10px 0 0 10px;
+position: relative;
+float: left;
+}
+
+.txt-center-box {
+color: white;
+margin: 0;
+position: absolute;
+top: 50%;
+left: 50%;
+font-size: 20px;
+transform: translate(-50%, -50%);
 }
