--- a/src/global.scss
+++ b/src/global.scss
@@ -29,3 +29,22 @@
     font-family: keepCalm;
     src: url('./assets/keepcalm-medium.ttf');
 }
+
+.alert-modal-css {
+    --backdrop-opacity: var(--ion-backdrop-opacity, 0.32);
+    .modal-wrapper {
+        background: transparent !important;
+        height: 55%;
+        width: 80%;
+        position: absolute;
+        display: block;
+        border-radius: 1em;
+    }
+}
+
+.ripple-parent {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  
