--- a/src/app/pages/learn/learn.page.scss
+++ b/src/app/pages/learn/learn.page.scss
@@ -1,3 +1,15 @@
+ion-content {
+    --background: url('../../../assets/background.jpg') no-repeat center center / cover;
+    font-family: keepCalm;
+}
+
+ion-toolbar {
+    --background: transparent;
+}
+.header-md::after {
+    display: none;
+  }
+
 .option-box {
     background-color: goldenrod;
     padding: 20px;
@@ -5,3 +17,22 @@
     margin: 10px;
     vertical-align: middle;
 }
+
+.container {
+    position: relative;
+    text-align: center;
+  }
+
+/* Centered text */
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 20px;
+  }
+
+  .starting-button {
+    width: 45%; border-radius: 40px; margin: auto
+  }
