screen orientation lock; fix leveling up; added question box

--- a/src/app/pages/category/category.page.scss
+++ b/src/app/pages/category/category.page.scss
@@ -37,7 +37,8 @@ ion-toolbar {
 }
 
 .starting-button {
-    width: 95%; border-radius: 40px; margin: auto;
+    width: 95%; border-radius: 40px; margin: 4px;
+
   }
 
   .disabled {
