--- a/src/app/pages/learn/learn.page.scss
+++ b/src/app/pages/learn/learn.page.scss
@@ -33,6 +33,10 @@ ion-toolbar {
     font-size: 20px;
   }
 
+  .padding-10-percent {
+    padding: 10%;
+  }
+
   .starting-button {
     width: 45%; border-radius: 40px; margin: auto
   }
