--- a/src/app/pages/learn/learn.page.html
+++ b/src/app/pages/learn/learn.page.html
@@ -12,7 +12,15 @@
 <ion-content *ngIf="quiz" fullscreen="true">
   <ion-row >
     <ion-col>
-      {{ quiz[i].option1 }}
+      <div class="container">
+        <img src="assets/square.png" style="width: 70%">
+        <div class="centered padding-10-percent">
+          {{ quiz[i].option1 }} <br>
+          <img src="assets/square.png"> <br>
+          {{quiz[i].option1 }}
+        </div>
+      </div>
+      
     </ion-col>
   </ion-row>
   <ion-row class="ion-align-items-center">
@@ -53,10 +61,10 @@
   </ion-row>
   <ion-row>
     <ion-col>
-      <ion-button (click)="next()" expand="full" class="ion-text-capitalize">nexet</ion-button>
+      <ion-button (click)="wrongAnswer()" expand="full" class="ion-text-capitalize">wrong</ion-button>
     </ion-col>
     <ion-col>
-      <ion-button (click)="wrongAnswer()" expand="full" class="ion-text-capitalize">wrong</ion-button>
+      <ion-button (click)="next()" expand="full" class="ion-text-capitalize">next</ion-button>
     </ion-col>
   </ion-row>
   
