Forcing lightmode; UI fix quiz

--- a/src/app/pages/category/category.page.html
+++ b/src/app/pages/category/category.page.html
@@ -32,6 +32,6 @@
     </ion-row>
   </div>
 
-  <!-- <ion-button (click)="openModal()">uwee</ion-button>
-  <img [src]="url"> -->
+  <!-- <ion-button (click)="openModal()">uwee</ion-button> --->
+  <img [src]="url">
 </ion-content>
