--- a/src/app/pages/learn/learn.page.scss
+++ b/src/app/pages/learn/learn.page.scss
@@ -3,6 +3,9 @@ ion-content {
     font-family: keepCalm;
 }
 
+.hanzi {
+  font-family: 'Noto Sans SC', sans-serif;
+}
 ion-toolbar {
     --background: transparent;
 }
