--- a/src/global.scss
+++ b/src/global.scss
@@ -30,6 +30,8 @@
     src: url('./assets/keepcalm-medium.ttf');
 }
 
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@700&display=swap");
+
 .alert-modal-css {
     --backdrop-opacity: var(--ion-backdrop-opacity, 0.32);
     .modal-wrapper {
