--- a/src/app/pages/learn/learn.page.html
+++ b/src/app/pages/learn/learn.page.html
@@ -16,7 +16,7 @@
         <img src="assets/square.png" style="width: 70%">
         <div class="centered padding-10-percent">
           <span class="hanzi">{{ quiz[i].answer }}</span> <br>
-          <ion-icon [src]="url" color="warning"></ion-icon> <br>
+          <!-- <ion-icon [src]="url" color="warning"></ion-icon> <br> -->
           {{quiz[i].trans }}
         </div>
       </div>
