--- a/src/app/pages/category/category.page.html
+++ b/src/app/pages/category/category.page.html
@@ -15,23 +15,17 @@
       <ion-col class="ion-text-center ion-no-padding" *ngFor="let category of categories" size="6" >
         
         <div *ngIf="category.available" [ngClass]="{ 'current': currLvl == category.key}" class="ion-activatable ripple-parent starting-button">
-          <img src="assets/buttons/learnBtn.png"  style="width : 100%" (click)="gotoLevels(category.key)" >
+          <img [src]="category.url"  style="width : 100%" (click)="gotoLevels(category.key)" >
           <ion-ripple-effect></ion-ripple-effect>
         </div>
         <div *ngIf="!category.available" class="disabled starting-button">
-          <img src="assets/buttons/learnBtn.png" style="width : 95%">
+          <img [src]="category.url" style="width : 95%">
         </div>
 
-        <!-- <div class="imgbox txt-center-box ion-activatable ripple-parent starting-button">
-          <ion-text>{{ category.name }}</ion-text>
-          <ion-ripple-effect></ion-ripple-effect>
-        </div> -->
-
-        <!-- <ion-button expand="full" (click)="gotoLevels(category.key)"  class="boxes text-category" [ngClass]="{ 'boxes-disabled': category.key > currLvl}" [disabled]="!category.available">{{ category.name }}</ion-button> -->
       </ion-col>
     </ion-row>
   </div>
 
   <!-- <ion-button (click)="openModal()">uwee</ion-button> --->
-  <img [src]="url">
+  <!-- <img [src]="url"> -->
 </ion-content>
