--- a/src/app/pages/learn/learn.page.html
+++ b/src/app/pages/learn/learn.page.html
@@ -61,7 +61,7 @@
   </ion-row>
   <ion-row>
     <ion-col>
-      <ion-button (click)="wrongAnswer()" expand="full" class="ion-text-capitalize">wrong</ion-button>
+      <ion-button (click)="wrongAnswer(i)" expand="full" class="ion-text-capitalize">wrong</ion-button>
     </ion-col>
     <ion-col>
       <ion-button (click)="next()" expand="full" class="ion-text-capitalize">next</ion-button>
