--- a/src/app/modals/level-pass/level-pass.page.scss
+++ b/src/app/modals/level-pass/level-pass.page.scss
@@ -43,3 +43,11 @@ ion-content {
     padding-left: 22px;
     padding-right: 22px;
 }
+
+.float-left {
+  float: left;
+}
+
+.width-40 {
+  width: 40%;
+}
