--- a/src/app/pages/category/category.page.html
+++ b/src/app/pages/category/category.page.html
@@ -2,10 +2,11 @@
   <ion-toolbar>
     <ion-buttons slot="start">
       <ion-button (click)="goBack()" slot="start" fill="clear">
+        <img src="./assets/buttons/circular/back.png"> 
         <ion-icon name="arrow-back" slot="icon-only" color="white"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title class="text-title" text-center>Level</ion-title>
+    <ion-title class="text-title" text-center>Categories</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -26,6 +27,6 @@
     </ion-row>
   </div>
 
-  <!-- <ion-button (click)="openModal()">uwee</ion-button> --->
+  <ion-button (click)="openModal()">uwee</ion-button> -
   <!-- <img [src]="url"> -->
 </ion-content>
