--- a/src/app/modals/level-pass/level-pass.page.scss
+++ b/src/app/modals/level-pass/level-pass.page.scss
@@ -1,12 +1,15 @@
 ion-content {
-    --background: url('../../../assets/modal-bg-1.png')  no-repeat center center / cover;
-    font-family: keepCalm;
-    object-fit: fill;
+  --background: url("../../../assets/modal-bg-1.png") no-repeat center center /
+    cover;
+  font-family: keepCalm;
+  object-fit: fill;
 }
 
 .starting-button {
-    width: 50%; border-radius: 40px; margin: auto
-  }
+  width: 50%;
+  border-radius: 40px;
+  margin: auto;
+}
 
 // .wrapper {
 //     background-image:
@@ -16,32 +19,32 @@ ion-content {
 //     max-width: 100%;
 //     border: 0.1em solid rgb(0,0,0);
 //     border-radius: 1em;
-    
+
 //     overflow: hidden;
 //     background-size: cover;
 //     background-position: center center;
 // }
 .message {
-    font-size: 16px;
-    line-height: 2;
-    font-weight: normal;
-    font-style: normal;
-    font-stretch: normal;
-    text-align: center;
-    padding: 5px 10px 5px 10px;
-  }
-  .sign-message img {
-    height: 140px;
-    margin: 0;
-  }
+  font-size: 16px;
+  line-height: 2;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  text-align: center;
+  padding: 5px 10px 5px 10px;
+}
+.sign-message img {
+  height: 140px;
+  margin: 0;
+}
 
 .padding-top-20 {
-    padding-top: 20px;
+  padding-top: 20px;
 }
 
 .padding-horizontal-22 {
-    padding-left: 22px;
-    padding-right: 22px;
+  padding-left: 22px;
+  padding-right: 22px;
 }
 
 .float-left {
