--- a/src/app/pages/learn/learn.page.html
+++ b/src/app/pages/learn/learn.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-buttons slot="primary">
       <ion-button (click)="closeLearning()" slot="start" fill="clear">
-        <img src="./assets/buttons/circular/close.png">
+        <img src="./assets/buttons/circular/close.png" />
         <ion-icon name="close" slot="icon-only" color="white"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -11,62 +11,70 @@
 </ion-header>
 
 <ion-content *ngIf="quiz" fullscreen="true">
-  <ion-row >
+  <ion-row>
     <ion-col>
       <div class="container">
-        <img src="assets/square.png" style="width: 50%">
+        <img src="assets/square.png" style="width: 50%" />
         <div class="centered padding-10-percent">
-          <span class="hanzi">{{ quiz[i].answer }}</span> <br>
+          <span class="hanzi">{{ quiz[i].answer }}</span> <br />
           <!-- <ion-icon [src]="url" color="warning"></ion-icon> <br> -->
           {{quiz[i].trans }}
         </div>
       </div>
-      
     </ion-col>
   </ion-row>
   <ion-row class="ion-align-items-center">
     <ion-col size="6" class="ion-text-center ion-no-padding">
       <div class="container">
-        <img src="assets/buttons/b_4.png" style="width: 80%">
+        <img src="assets/buttons/b_4.png" style="width: 80%" />
         <div class="centered">{{ quiz[i].option1 }}</div>
       </div>
     </ion-col>
     <ion-col size="6" class="ion-text-center ion-no-padding">
       <div class="container">
-        <img src="assets/buttons/b_4.png" style="width: 80%">
+        <img src="assets/buttons/b_4.png" style="width: 80%" />
         <div class="centered">{{ quiz[i].option2 }}</div>
       </div>
     </ion-col>
     <ion-col size="6" class="ion-text-center ion-no-padding">
       <div class="container">
-        <img src="assets/buttons/b_4.png" style="width: 80%">
+        <img src="assets/buttons/b_4.png" style="width: 80%" />
         <div class="centered">{{ quiz[i].option3 }}</div>
       </div>
     </ion-col>
     <ion-col size="6" class="ion-text-center ion-no-padding">
       <div class="container">
-        <img src="assets/buttons/b_4.png" style="width: 80%">
+        <img src="assets/buttons/b_4.png" style="width: 80%" />
         <div class="centered">{{ quiz[i].option4 }}</div>
       </div>
     </ion-col>
   </ion-row>
-  
+
   <ion-row>
     <ion-col>
       <div class="ion-activatable ripple-parent starting-button">
-        <img src="assets/buttons/answerBtn.png" style="width : 100%" (click)="startSpeech()" >
+        <img
+          src="assets/buttons/answerBtn.png"
+          style="width: 100%"
+          (click)="startSpeech()"
+        />
         <ion-ripple-effect></ion-ripple-effect>
       </div>
-      
     </ion-col>
   </ion-row>
   <ion-row>
     <ion-col>
-      <ion-button (click)="wrongAnswer(i)" expand="full" class="ion-text-capitalize">wrong</ion-button>
+      <ion-button
+        (click)="wrongAnswer(i)"
+        expand="full"
+        class="ion-text-capitalize"
+        >wrong</ion-button
+      >
     </ion-col>
     <ion-col>
-      <ion-button (click)="next()" expand="full" class="ion-text-capitalize">next</ion-button>
+      <ion-button (click)="next()" expand="full" class="ion-text-capitalize"
+        >next</ion-button
+      >
     </ion-col>
   </ion-row>
-  
 </ion-content>
