--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,3 +1,15 @@
+<ion-header translucent="true">
+  <ion-toolbar>
+    <ion-buttons slot="primary">
+      <ion-button (click)="gotoAchievements()" slot="start" fill="clear">
+        <img src="./assets/buttons/circular/achieve.png" />
+        <ion-icon name="close" slot="icon-only" color="white"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <!-- <ion-title class="text-title" text-center>Level</ion-title> -->
+  </ion-toolbar>
+</ion-header>
+
 <ion-content fullscreen="true">
   <div id="container">
     <ion-row class="text-title ion-text-center" style="margin-top: 40%">
