--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -23,7 +23,7 @@
           <img
             src="assets/buttons/learnBtn.png"
             style="width: 100%"
-            (click)="gotoCat()"
+            (click)="gotoCat('test')"
           />
           <ion-ripple-effect></ion-ripple-effect>
         </div>
@@ -39,7 +39,7 @@
           <img
             src="assets/buttons/practiceBtn.png"
             style="width: 100%"
-            (click)="gotoCat()"
+            (click)="gotoCat('practice')"
           />
           <ion-ripple-effect></ion-ripple-effect>
         </div>
