--- a/android/app/src/main/res/xml/config.xml
+++ b/android/app/src/main/res/xml/config.xml
@@ -15,5 +15,10 @@
     <param name="onload" value="true"/>
   </feature>
 
+  <feature name="TTS">
+    <param name="android-package" value="com.wordsbaking.cordova.tts.TTS"/>
+    <param name="onload" value="true"/>
+  </feature>
+
   
 </widget>
