--- a/src/app/pages/practice/practice.page.html
+++ b/src/app/pages/practice/practice.page.html
@@ -11,6 +11,9 @@
 </ion-header>
 
 <ion-content *ngIf="quiz" fullscreen="true">
+  <!-- TESTING IMAGE -->
+  <!-- <img [src]="url" /> -->
+
   <ion-row>
     <ion-col>
       <div
@@ -32,7 +35,7 @@
     <ion-col>
       <div class="ion-activatable ripple-parent starting-button">
         <img
-          src="assets/buttons/answerBtn.png"
+          src="assets/buttons/speakBtn.png"
           style="width: 100%"
           (click)="startSpeech()"
         />
@@ -40,6 +43,8 @@
       </div>
     </ion-col>
   </ion-row>
+
+  <!-- TESTING WRONG/RIGHT ANSWER -->
   <ion-row>
     <ion-col>
       <ion-button
