--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -12,23 +12,26 @@
 
 <ion-content fullscreen="true">
   <div id="container">
-    <ion-row class="text-title ion-text-center" style="margin-top: 40%">
+    <ion-row
+      class="text-title ion-text-center big-letters"
+      style="margin-top: 40%"
+    >
       <ion-col> Learn Chinese </ion-col>
     </ion-row>
-    <ion-row>
+
+    <ion-row style="margin-top: 10px">
       <ion-col>
-        <!-- <ion-button (click)="gotoCat()" class="boxes text-category" expand="block" color="verdigris">Learn</ion-button> -->
         <!-- <ion-item lines="none"> -->
         <div class="ion-activatable ripple-parent starting-button">
           <img
             src="assets/buttons/learnBtn.png"
             style="width: 100%"
-            (click)="gotoCat('test')"
+            (click)="gotoCat('learn')"
           />
           <ion-ripple-effect></ion-ripple-effect>
         </div>
-
         <!-- </ion-item> -->
+        <!-- <ion-button class="boxes text-category" expand="block" color="verdigris">Practice</ion-button> -->
       </ion-col>
     </ion-row>
 
@@ -45,6 +48,23 @@
         </div>
         <!-- </ion-item> -->
         <!-- <ion-button class="boxes text-category" expand="block" color="verdigris">Practice</ion-button> -->
+      </ion-col>
+    </ion-row>
+
+    <ion-row style="margin-top: 10px">
+      <ion-col>
+        <!-- <ion-button (click)="gotoCat()" class="boxes text-category" expand="block" color="verdigris">Learn</ion-button> -->
+        <!-- <ion-item lines="none"> -->
+        <div class="ion-activatable ripple-parent starting-button">
+          <img
+            src="assets/buttons/testBtn.png"
+            style="width: 100%"
+            (click)="gotoCat('test')"
+          />
+          <ion-ripple-effect></ion-ripple-effect>
+        </div>
+
+        <!-- </ion-item> -->
       </ion-col>
     </ion-row>
   </div>
