Stars in practice mode

--- a/src/app/modals/confirm-exit/confirm-exit.page.html
+++ b/src/app/modals/confirm-exit/confirm-exit.page.html
@@ -14,20 +14,18 @@
         class="ion-activatable ripple-parent starting-button ion-text-right"
         (click)="cancel()"
       >
-        <img src="assets/buttons/learnBtn.png" class="ion-text-right" />
+        <img src="assets/buttons/circular/close.png" class="ion-text-right" />
         <ion-ripple-effect></ion-ripple-effect>
       </div>
-
-     
     </ion-col>
     <ion-col size="6">
       <div
-      class="ion-activatable ripple-parent starting-button ion-text-left"
-      (click)="confirmExit()"
-    >
-      <img src="assets/buttons/learnBtn.png" />
-      <ion-ripple-effect></ion-ripple-effect>
-    </div>
+        class="ion-activatable ripple-parent starting-button ion-text-left"
+        (click)="confirmExit()"
+      >
+        <img src="assets/buttons/circular/exit.png" />
+        <ion-ripple-effect></ion-ripple-effect>
+      </div>
     </ion-col>
     <!-- <ion-col size="6">
       <div class="ion-activatable ripple-parent starting-button" (click)="closeModal()">
