--- a/src/app/pages/test/test.page.html
+++ b/src/app/pages/test/test.page.html
@@ -17,13 +17,14 @@
         <img src="assets/square.png" style="width: 50%" />
         <div class="centered padding-10-percent">
           <span class="hanzi">{{ quiz[i].answer }}</span> <br />
+          <img [src]="quiz[i].url" width="50%" /> <br />
           <!-- <ion-icon [src]="url" color="warning"></ion-icon> <br> -->
           {{quiz[i].trans }}
         </div>
       </div>
     </ion-col>
   </ion-row>
-  <ion-row class="ion-align-items-center">
+  <!-- <ion-row class="ion-align-items-center">
     <ion-col size="6" class="ion-text-center ion-no-padding">
       <div class="container">
         <img src="assets/buttons/b_4.png" style="width: 80%" />
@@ -48,7 +49,7 @@
         <div class="centered">{{ quiz[i].option4 }}</div>
       </div>
     </ion-col>
-  </ion-row>
+  </ion-row> -->
 
   <ion-row>
     <ion-col>
@@ -62,7 +63,7 @@
       </div>
     </ion-col>
   </ion-row>
-  <ion-row>
+  <!-- <ion-row>
     <ion-col>
       <ion-button
         (click)="wrongAnswer(i)"
@@ -76,5 +77,29 @@
         >next</ion-button
       >
     </ion-col>
-  </ion-row>
+  </ion-row> -->
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <ion-row class="ion-justify-content-center ion-margin-horizontal">
+      <ion-col size="1" *ngFor="let x of scoreArray; let i = index">
+        <img
+          *ngIf="i < score && score != 0"
+          style="width: 100%"
+          src="./assets/s1.png"
+        />
+
+        <img
+          *ngIf="i >= score || score == 0"
+          style="width: 100%"
+          src="./assets/s2.png"
+        />
+      </ion-col>
+    </ion-row>
+  </ion-toolbar>
+
+  <!-- <div *ngFor="let x of quiz" style="float: left">
+    <img style="width: 40%" src="./assets/s1.png" />
+  </div> -->
+</ion-footer>
