--- a/src/app/pages/test/test.page.html
+++ b/src/app/pages/test/test.page.html
@@ -63,7 +63,7 @@
       </div>
     </ion-col>
   </ion-row>
-  <!-- <ion-row>
+  <ion-row>
     <ion-col>
       <ion-button
         (click)="wrongAnswer(i)"
@@ -77,7 +77,7 @@
         >next</ion-button
       >
     </ion-col>
-  </ion-row> -->
+  </ion-row>
 </ion-content>
 
 <ion-footer>
